Fix Alignment issues

--- a/src/style/App.css
+++ b/src/style/App.css
@@ -40,7 +40,9 @@
   font-size: 25px;
   color: inherit;
   margin: 0 20px 0 20px;
+  padding-top: 10px;
   font-family: "Montserrat";
+  /* align-self: center !important; */
 }
 
 .menus {
@@ -50,7 +52,6 @@
 
 .logolink {
   display: inherit;
-  align-items: center;
 }
 
 .menu-items {
@@ -71,9 +72,10 @@
   display: block;
   color: white;
   background-color: #1d2022 !important;
-  padding: 0.7rem 1rem !important;
+  /* padding: 0.7rem 1rem !important; */
   position: relative;
   font-size: 16px;
+  width: 10rem;
 }
 
 .dropdown-items a {
